--- a/joomla.html
+++ b/joomla.html
@@ -171,7 +171,7 @@
                                     },
                                     cookie_table: [             // list of all expected cookies
                                         {
-                                            col1: 'sid',       // match all cookies starting with "_ga"
+                                            col1: 'sid',       
                                             col2: 'seznam.cz',
                                             col3: '30 dní',
                                             col4: 'Cookie využívaná pro identifikaci zařízení v rámci všech služeb Seznam.cz.',
