--- a/joomla.html
+++ b/joomla.html
@@ -159,6 +159,12 @@
                                             col2: 'google.com',
                                             col3: '1 den',
                                             col4: 'Soubor cookie _gid, instalovaný službou Google Analytics, ukládá informace o tom, jak návštěvníci používají webové stránky, a zároveň vytváří analytickou zprávu o výkonu webových stránek. Mezi shromažďované údaje patří počet návštěvníků, jejich zdroj a anonymně navštívené stránky.',
+                                        },
+                                        {
+                                            col1: 'gat',
+                                            col2: 'google.com',
+                                            col3: '1 minuta',
+                                            col4: 'Neshromažďuje data, pouze reguluje počet požadavků na stránky doubleclick.net',
                                         }
                                     ]
                                 }, {
