--- a/V4-beta-facebook-consent.html
+++ b/V4-beta-facebook-consent.html
@@ -19,7 +19,7 @@ add_action( 'wp_head', function () { ?>
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-TWDR5SG');</script>
+})(window,document,'script','dataLayer','xxx-xxxxxx');</script>
 <!-- End Google Tag Manager -->
 
 <?php } );
@@ -284,7 +284,7 @@ add_action( 'wp_body_open', function () { ?>
 </script>
 
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TWDR5SG" height="0" width="0"
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=xxx-xxxxxx" height="0" width="0"
         style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
