--- a/V4-beta-facebook-consent.html
+++ b/V4-beta-facebook-consent.html
@@ -114,7 +114,7 @@ add_action( 'wp_body_open', function () { ?>
                         gtag('consent', 'update', {
                             'ad_storage': 'denied'
                         });
-			fbq('consent', 'revoke);
+			fbq('consent', 'revoke');
                     }
                 },
     
